# rust_mpepe

./: Cargo.toml  build.sh  env copy  vercel.json
public/: index.html  main.js  styles.css
src/: main.rs
src/api/: index.rs
src/models/: requests.rs  responses.rs
src/routes/: callback.rs  mod.rs  stk.rs
src/services/: mod.rs  mpesa.rs  utils.rs
