[package]
name = "mpesa_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
shuttle-actix-web = "0.40.0"
shuttle-runtime = "0.40.0"